--- a/trab-aula-7/index.html
+++ b/trab-aula-7/index.html
@@ -3,18 +3,7 @@
     <head>
         <title>Aula 7 - Tranalho</title>
         <link rel="stylesheet" type="text/css" href="./css/pagina.css">
-
-
-    <script>
-        function mostraMSG() {
-            if (document.getElementById("msg-botao").innerText === "") {
-                document.getElementById("msg-botao").innerText="Bingo! Pena que to sem ideia pra mensagens motivadoras!";
-            } else {
-                document.getElementById("msg-botao").innerText="";
-            }
-        }
-    </script>
-
+        <script src="./js/util.js"></script>
     </head>
     <body>
         <h1>Ricardo Quadros</h1>
